sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '<-' expected but '=' found.
    for (i=0 to (n-2) {
          ^AlgBubbleSort1:15: error: illegal start of simple expression
  }
  ^